--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^6.12.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "prisma": "^6.12.0"
+    "prisma": "^6.12.0",
+    "zod": "^4.1.1"
   }
 }
